--- a/task-management-service/application-dev.yaml
+++ b/task-management-service/application-dev.yaml
@@ -1,2 +1,28 @@
+spring:
+  #Database configuration
+  jpa:
+    hibernate:
+      ddl-auto: create-drop
+    show-sql: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.MySQL8Dialect
+  datasource:
+    username: dev01
+    password: dev01
+    url: jdbc:mysql://localhost:3307/task_management_db
+    driver-class-name: com.mysql.cj.jdbc.Driver
+    name: task_management_db
+
+
 server:
-  port:8089
+ port: 8089
+
+#Eureka server configuration
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8761/eureka
+    register-with-eureka: true
+    fetch-registry: true
+
