--- a/application.yml
+++ b/application.yml
@@ -1,2 +1,9 @@
-server:
-  port: 8090
+#Eureka server configuration
+eureka:
+  client:
+    service-url:
+      defaultZone: http://localhost:8762/eureka
+    register-with-eureka: true
+    fetch-registry: true
+  instance:
+    hostname: localhost
